--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
-  "name": "algorithms-project",
+  "name": "algososh",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://julfy-bs.github.io/algososh",
+  "author": {
+    "name": "Bogdan Sutuzhko",
+    "email": "julfy-bs@yandex.ru"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.2",
+    "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.0",
     "@types/node": "^16.11.22",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.11",
+    "@types/react": "18.2.21",
+    "@types/react-dom": "^18.2.7",
     "nanoid": "^3.2.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.3.1",
     "react-router-dom": "^5.2.1",
     "react-scripts": "5.0.0",
@@ -23,13 +28,25 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "cypress:open": "cypress open",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
     ]
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "^5.3.3",
+    "@types/react-test-renderer": "18.0.0",
+    "cypress": "^12.17.4",
+    "fetch-mock": "^9.11.0",
+    "gh-pages": "^5.0.0",
+    "jest": "^29.6.4",
+    "react-test-renderer": "^18.2.0"
   },
   "browserslist": {
     "production": [
@@ -42,8 +59,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/react-router-dom": "^5.3.3"
   }
 }
