--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^16.11.22",
     "@types/react": "18.2.21",
     "@types/react-dom": "^18.2.7",
+    "clsx": "^2.0.0",
     "nanoid": "^3.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
